refactor(test): update test class